third_party/move/move-compiler-v2/tests/checking/typing/v1-commands/unpack_missing_binding.exp

Diagnostics:
error: missing field `y`
   ┌─ tests/checking/typing/v1-commands/unpack_missing_binding.move:11:13
   │
11 │         let T { i, x, b: flag } = t;
   │             ^^^^^^^^^^^^^^^^^^^
